Fixed exploits and added a feature
Fixed boss level exploit
Fixed double battle start bug
Added a sell all button!

--- a/index.html
+++ b/index.html
@@ -223,24 +223,32 @@
           
  <div class="col-xs-4"  id="bosslevelminus"><button id="minus" class="btn btn-block btn-warning">Boss Level Decrease</button></div>
 
- <div class="col-xs-4" id="fightbuttondiv"><button id="fightbutton" class="btn btn-block btn-success">Fights: 0</button></div>           
+ <div class="col-xs-4" id="fightbuttondiv"><button id="fightbutton" class="btn btn-block btn-success">FIGHT BOSS!</button></div>           
 
  <div class="col-xs-4"  id="bosslevelplus"><button id="plus" class="btn  btn-block btn-warning">Boss Level Increase</button></div>
+</div>
 
 <div id="summonbuttons">
  <div class="col-xs-4"  id="summonslower"><button id="minus" class="btn btn-block btn-warning">Slower Boss spawn</button></div>
 
- <div class="col-xs-4" id="summonsdiv"><button id="summons" class="btn btn-block btn-success">1 spawn per: 10 seconds</button></div>           
+ <div class="col-xs-4" id="summonsdiv"><button id="summons" class="btn btn-block btn-success">1 spawn per: 1 minute</button></div>           
 
  <div class="col-xs-4"  id="summonfaster"><button id="plus" class="btn  btn-block btn-warning">Faster Boss spawn</button></div>
 </div>
 
 
+<div id="textstats">
  <p id="gold">Gold</p>
 
  <p id="level"> Level </p>
 
+ <p id="bosssummons">Boss Summons:</p>
 
+ </div>
+
+
+
+<div id="sellalldiv" class="col-xs-12"><button id="sellall" class="btn btn-block btn-danger">Sell all inventory!</button></div>
 
  </div> 
           
@@ -313,6 +321,7 @@
 <div id="showdiv1">
   <button class="btn btn-block btn-success" id="unequip">Unequip</button> 
 </div>
+
 
 
 
